# pnkr_ng

./: .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json  vcpkg_baseline.json
cmake/: CodeCoverage.cmake  (+1 more)
engine/: CMakeLists.txt  repomix-output.xml
engine/cmake/: BinToHeader.cmake  RunBinToHeader.cmake
engine/include/pnkr/: engine.hpp
engine/shaders/: bindless.glsl  fullscreen.vert  skybox.frag  skybox.vert  sprite_billboard.frag  sprite_billboard.vert
engine/shaders/grid/: grid.frag  grid.vert  grid_calculation.glsl  grid_parameters.glsl
engine/shaders/post/: adaptation.comp  bloom.comp  bright_pass.comp  tonemap.frag
engine/shaders/ssao/: blur.comp  composition.frag  depth_resolve.comp  ssao.comp
engine/src/app/: Application.cpp  CMakeLists.txt  ConsoleWindow.cpp
engine/src/assets/: AssetImporter.cpp  BC7Encoder.cpp  CMakeLists.txt  GLTFParser.cpp  GeometryProcessor.cpp  MemoryMappedFile.cpp  TextureCacheSystem.cpp  TextureLoader.cpp
engine/src/core/: CMakeLists.txt  ECS.cpp  JobSystem.cpp  MemoryMappedFile.cpp  RecentFiles.cpp  RecentFilesImGui.cpp  RecentFilesStore.cpp  TaskSystem.cpp  cvar.cpp  implementations.cpp  logger.cpp
engine/src/debug/: CMakeLists.txt  RenderDoc.cpp
engine/src/filesystem/: CMakeLists.txt  VFS.cpp
engine/src/platform/: CMakeLists.txt  FileDialog.cpp  window.cpp
engine/src/renderer/: AssetManager.cpp  AsyncIOLoader.cpp  AsyncLoader.cpp  AsyncLoaderStagingManager.cpp  BRDFLutGenerator.cpp  CMakeLists.txt  CommandListPool.cpp  FallbackTextureFactory.cpp  FrameManager.cpp  GPUTransferQueue.cpp  GlobalResourcePool.cpp  IndirectPipeline.cpp  IndirectRenderer.cpp  RHIDeviceContext.cpp  RHIPipelineCache.cpp  RHIResourceManager.cpp  RHISwapchainManager.cpp  RenderContext.cpp  RenderDevice.cpp  ResourceRequestManager.cpp  SceneUniformProvider.cpp  ShaderCache.cpp  ShaderCompiler.cpp  ShaderHotReloader.cpp  SystemMeshes.cpp  TextureCache.cpp  TextureStreamer.cpp  ktx_utils.cpp  renderer.cpp  rhi_renderer.cpp  scene.cpp
engine/src/rhi/: CMakeLists.txt  rhi_factory.cpp  rhi_pipeline_builder.cpp  rhi_shader.cpp
samples/: CMakeLists.txt  repomix-output.xml
samples/common/: GeometryUtils.h  NfdFileDialog.cpp  NfdFileDialog.hpp  RhiSampleApp.hpp  SampleApp.h
samples/cube/: CMakeLists.txt  main.cpp
samples/cube/shaders/: cube.frag  cube.vert
samples/debug_canvas/: CMakeLists.txt  main.cpp
samples/debug_canvas/shaders/: line_canvas.vert
samples/gltf/: CMakeLists.txt  main.cpp
samples/gltf/shaders/: gltf.frag  gltf.vert  tonemap.comp
samples/gltf_bindless/: CMakeLists.txt  main.cpp
samples/gltf_bindless/shaders/: bindless.glsl  gltf.frag  gltf_bindless.frag  gltf_bindless.vert
samples/multidraw/: CMakeLists.txt  main.cpp
samples/rhiBrdfLut/: CMakeLists.txt  main.cpp
samples/rhiBrdfLut/shaders/: brdf_lut.comp  brdf_lut.slang
samples/rhiComputeTexture/: CMakeLists.txt  main.cpp
samples/rhiComputeTexture/shaders/: bindless.glsl  fullscreen.frag  fullscreen.vert  industrial.comp
samples/rhiComputedMesh/: CMakeLists.txt  main.cpp
samples/rhiComputedMesh/shaders/: common.glsl  mesh.comp  mesh.frag  mesh.geom  mesh.vert  texture.comp
samples/rhiCube/: CMakeLists.txt  main.cpp
samples/rhiCube/shaders/: triangle.frag
samples/rhiGltfBindless/: CMakeLists.txt  main.cpp
samples/rhiGltfBindless/shaders/: bindless.glsl  gltf_bindless.frag  gltf_bindless.vert
samples/rhiGrid/: CMakeLists.txt  main.cpp
samples/rhiIndirectGLTF/: CMakeLists.txt  IndirectRenderer.cpp  IndirectRenderer.hpp  RecentFiles.cpp  RecentFiles.hpp  RenderDocIntegration.cpp  RenderDocIntegration.hpp  main.cpp
samples/rhiIndirectGLTF/shaders/: indirect.frag  indirect.vert  pbr_common.glsl
samples/rhiInstancedDucks/: CMakeLists.txt  main.cpp
samples/rhiInstancedDucks/shaders/: bindless.glsl  instanced_ducks.frag  instanced_ducks.vert  instanced_ducks_compute.comp  shared_structs.glsl
samples/rhiMillionCubes/: CMakeLists.txt  main.cpp
samples/rhiMillionCubes/shaders/: bindless.glsl  million_cubes.frag  million_cubes.vert
samples/rhiMultidraw/: CMakeLists.txt  main.cpp
samples/rhiMultidraw/shaders/: triangle.vert
samples/rhiOffscreenMipRendering/: CMakeLists.txt  main.cpp
samples/rhiOffscreenMipRendering/shaders/: offscreen.frag  offscreen.vert
samples/rhiPBR/: CMakeLists.txt  main.cpp
samples/rhiPBR/assets/: brdf_lut.ktx2
samples/rhiPBR/shaders/: bindless.glsl  pbr.frag  pbr.vert  pbr_common.glsl  pbr_math.glsl
samples/rhiSkybox/: CMakeLists.txt  main.cpp
samples/rhiSkybox/shaders/: skybox.frag  skybox.vert
samples/rhiSprites/: CMakeLists.txt  main.cpp
samples/rhiTessellation/: CMakeLists.txt  main.cpp
samples/rhiTessellation/shaders/: bindless.glsl  common_structs.glsl  gltf_bindless.frag  tessellation.tesc  tessellation.tese  tessellation.vert  wireframe.geom
samples/rhiTriangle/: CMakeLists.txt  main.cpp
samples/rhiUnifiedGLTF/: CMakeLists.txt  main.cpp
samples/rhiUnifiedGLTFDOD/: CMakeLists.txt  main.cpp
samples/rhiUnifiedMesh/: CMakeLists.txt  main.cpp  repomix-output.xml
samples/rhiUnlit/: CMakeLists.txt  main.cpp
samples/rhiVertexPulling/: CMakeLists.txt  main.cpp
samples/scene/: CMakeLists.txt  main.cpp
samples/scene_editor/: CMakeLists.txt  IndirectRenderer.cpp  IndirectRenderer.hpp  SceneEditorApp.cpp  SceneEditorApp.hpp  main.cpp
samples/triangle/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  FiberTests.cpp  doctest_main.cpp
tests/assets/: texture_loader_test.cpp
tests/core/: Test_JobSystem.cpp
tests/renderer/: Test_AsyncLoader.cpp  Test_NullRHI.cpp  Test_RHIResourceManager.cpp  Test_ResourceRequestManager.cpp  Test_ResourceStateMachine.cpp
tests/rhi/: Test_VulkanBindless.cpp  Test_VulkanCompute.cpp  Test_VulkanPipelines.cpp  Test_VulkanRHI.cpp  Test_VulkanSynchronization.cpp  VulkanTestContext.cpp  VulkanTestContext.hpp
tests/shaders/: test_bindless.slang  test_compute.slang  test_fragment.slang  test_vertex.slang
tools/: CMakeLists.txt  ShaderStructGen.cpp
(+411 files in other folders)
